--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
 click==8.1.3
+colorama==0.4.5
 Flask==2.1.2
-imbalanced-learn==0.9.1
-imblearn==0.0
-importlib-metadata==4.11.4
+imbalanced-learn==0.9.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 joblib==1.1.0
@@ -16,4 +15,3 @@ scipy==1.8.1
 six==1.16.0
 threadpoolctl==3.1.0
 Werkzeug==2.1.2
-zipp==3.8.0
